// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / Bottom Wizard Bar Default 1`] = `
.c4 {
  padding-left: 12px;
  padding-top: 8px;
  padding-right: 12px;
  padding-bottom: 8px;
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -8px;
  margin-right: -8px;
}

.c5 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c5 > *:not(:first-child) {
  padding-top: 0;
}

.c6 {
  box-sizing: border-box;
}

.c9 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -8px;
  margin-right: -8px;
}

.c9 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c9 > *:not(:first-child) {
  padding-top: 0;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c7 {
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #0046FF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c10 {
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 8px 16px;
  min-height: 40px;
  background-color: #0046FF;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c10::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c10:hover {
  background-color: hsl(223.5,100%,45%);
}

.c10:active {
  background-color: hsl(223.5,100%,40%);
}

.c0 {
  background-color: #FFFFFF;
}

.c2 {
  box-sizing: border-box;
  margin: 0 auto;
}

.c1 {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 400;
  border-top: 1px solid #EBEBE8;
}

.c3 {
  margin: 0 auto;
}

@media (min-width:760px) {
  .c4 {
    padding-left: 0px;
    padding-top: 8px;
    padding-right: 0px;
    padding-bottom: 8px;
  }
}

@media (min-width:760px) {
  .c5 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-left: -16px;
    margin-right: -16px;
  }

  .c5 > * {
    padding-left: 16px;
    padding-right: 16px;
  }

  .c5 > *:not(:first-child) {
    padding-top: 0;
  }
}

@media (min-width:760px) {
  .c9 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-left: -16px;
    margin-right: -16px;
  }

  .c9 > * {
    padding-left: 16px;
    padding-right: 16px;
  }

  .c9 > *:not(:first-child) {
    padding-top: 0;
  }
}

@media (min-width:760px) {
  .c2 {
    max-width: 760px;
    padding: 0 20px;
  }
}

@media (min-width:976px) {
  .c2 {
    max-width: 976px;
    padding: 0 20px;
  }
}

@media (min-width:1280px) {
  .c2 {
    max-width: 1280px;
    padding: 0 20px;
  }
}

@media (min-width:1600px) {
  .c2 {
    max-width: 1600px;
    padding: 0 20px;
  }
}

@media print {
  .c2 {
    max-width: none;
  }
}

@media (min-width:760px) {
  .c11 {
    min-width: 160px;
  }
}

@media (min-width:1600px) {
  .c3 {
    width: 83.33333333333334%;
  }
}

<div
  className="c0 c1"
>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <nav
        aria-label="Title"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6"
            >
              <a
                className="c7"
                href="https://nordnet.se/cancel"
                onClick={[Function]}
              >
                <span
                  className="c8"
                >
                  Cancel
                </span>
              </a>
            </div>
            <div
              className="c9"
            >
              <div
                className="c6"
              >
                <a
                  className="c7"
                  href="https://nordnet.se/previous"
                  onClick={[Function]}
                >
                  <span
                    className="c8"
                  >
                    Previous
                  </span>
                </a>
              </div>
              <div
                className="c6"
              >
                <a
                  className="c10 c11"
                  href="https://nordnet.se/next"
                  onClick={[Function]}
                >
                  <span>
                    <span
                      className="c8"
                    >
                      Next
                    </span>
                  </span>
                </a>
              </div>
            </div>
          </div>
        </div>
      </nav>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / Bottom Wizard Bar Last Step And Loading 1`] = `
.c4 {
  padding-left: 12px;
  padding-top: 8px;
  padding-right: 12px;
  padding-bottom: 8px;
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -8px;
  margin-right: -8px;
}

.c5 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c5 > *:not(:first-child) {
  padding-top: 0;
}

.c6 {
  box-sizing: border-box;
}

.c9 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -8px;
  margin-right: -8px;
}

.c9 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c9 > *:not(:first-child) {
  padding-top: 0;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c7 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #A0A09B;
  border: none;
  border-radius: 0;
  cursor: not-allowed;
}

.c7,
.c7[type='button'],
.c7[type='reset'],
.c7[type='submit'] {
  -webkit-appearance: button;
}

.c7::-moz-focus-inner,
.c7[type='button']::-moz-focus-inner,
.c7[type='reset']::-moz-focus-inner,
.c7[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c7:-moz-focusring,
.c7[type='button']:-moz-focusring,
.c7[type='reset']:-moz-focusring,
.c7[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c10 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 8px 16px;
  min-height: 40px;
  background-color: #0046FF;
  color: #FFFFFF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c10,
.c10[type='button'],
.c10[type='reset'],
.c10[type='submit'] {
  -webkit-appearance: button;
}

.c10::-moz-focus-inner,
.c10[type='button']::-moz-focus-inner,
.c10[type='reset']::-moz-focus-inner,
.c10[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c10:-moz-focusring,
.c10[type='button']:-moz-focusring,
.c10[type='reset']:-moz-focusring,
.c10[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c10::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c10:hover {
  background-color: hsl(223.5,100%,45%);
}

.c10:active {
  background-color: hsl(223.5,100%,40%);
}

.c0 {
  background-color: #FFFFFF;
}

.c2 {
  box-sizing: border-box;
  margin: 0 auto;
}

.c1 {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 400;
  border-top: 1px solid #EBEBE8;
}

.c3 {
  margin: 0 auto;
}

@media (min-width:760px) {
  .c4 {
    padding-left: 0px;
    padding-top: 8px;
    padding-right: 0px;
    padding-bottom: 8px;
  }
}

@media (min-width:760px) {
  .c5 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-left: -16px;
    margin-right: -16px;
  }

  .c5 > * {
    padding-left: 16px;
    padding-right: 16px;
  }

  .c5 > *:not(:first-child) {
    padding-top: 0;
  }
}

@media (min-width:760px) {
  .c9 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-left: -16px;
    margin-right: -16px;
  }

  .c9 > * {
    padding-left: 16px;
    padding-right: 16px;
  }

  .c9 > *:not(:first-child) {
    padding-top: 0;
  }
}

@media (min-width:760px) {
  .c2 {
    max-width: 760px;
    padding: 0 20px;
  }
}

@media (min-width:976px) {
  .c2 {
    max-width: 976px;
    padding: 0 20px;
  }
}

@media (min-width:1280px) {
  .c2 {
    max-width: 1280px;
    padding: 0 20px;
  }
}

@media (min-width:1600px) {
  .c2 {
    max-width: 1600px;
    padding: 0 20px;
  }
}

@media print {
  .c2 {
    max-width: none;
  }
}

@media (min-width:760px) {
  .c11 {
    min-width: 160px;
  }
}

@media (min-width:1600px) {
  .c3 {
    width: 83.33333333333334%;
  }
}

<div
  className="c0 c1"
>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <nav
        aria-label="Title"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6"
            >
              <button
                className="NormalizedButton__Button-ey7f5x-0 c7"
                disabled={true}
                onClick={[Function]}
                type="reset"
              >
                <span
                  className="c8"
                >
                  Cancel
                </span>
              </button>
            </div>
            <div
              className="c9"
            >
              <div
                className="c6"
              >
                <button
                  className="NormalizedButton__Button-ey7f5x-0 c7"
                  disabled={true}
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="c8"
                  >
                    Previous
                  </span>
                </button>
              </div>
              <div
                className="c6"
              >
                <button
                  className="NormalizedButton__Button-ey7f5x-0 c10 c11"
                  onClick={[Function]}
                  type="submit"
                >
                  <span>
                    <span
                      className="c8"
                    >
                      Submit
                    </span>
                  </span>
                  <span />
                </button>
              </div>
            </div>
          </div>
        </div>
      </nav>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / Bottom Wizard Bar Previous Button Disabled 1`] = `
.c4 {
  padding-left: 16px;
  padding-top: 12px;
  padding-right: 16px;
  padding-bottom: 12px;
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -8px;
  margin-right: -8px;
}

.c5 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c5 > *:not(:first-child) {
  padding-top: 0;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c6 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c6 > *:not(:first-child) {
  padding-top: 0;
}

.c7 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c8 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  padding: 8px 16px;
  min-height: 40px;
  background-color: #0046FF;
  color: #FFFFFF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c8,
.c8[type='button'],
.c8[type='reset'],
.c8[type='submit'] {
  -webkit-appearance: button;
}

.c8::-moz-focus-inner,
.c8[type='button']::-moz-focus-inner,
.c8[type='reset']::-moz-focus-inner,
.c8[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c8:-moz-focusring,
.c8[type='button']:-moz-focusring,
.c8[type='reset']:-moz-focusring,
.c8[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c8::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c8:hover {
  background-color: hsl(223.5,100%,45%);
}

.c8:active {
  background-color: hsl(223.5,100%,40%);
}

.c0 {
  background-color: #FFFFFF;
}

.c2 {
  box-sizing: border-box;
  margin: 0 auto;
}

.c1 {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 400;
  border-top: 1px solid #EBEBE8;
}

.c3 {
  margin: 0 auto;
}

@media (min-width:760px) {
  .c4 {
    padding-left: 0px;
    padding-top: 8px;
    padding-right: 0px;
    padding-bottom: 8px;
  }
}

@media (min-width:760px) {
  .c5 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-left: -16px;
    margin-right: -16px;
  }

  .c5 > * {
    padding-left: 16px;
    padding-right: 16px;
  }

  .c5 > *:not(:first-child) {
    padding-top: 0;
  }
}

@media (min-width:760px) {
  .c6 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-left: -16px;
    margin-right: -16px;
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }

  .c6 > * {
    padding-left: 16px;
    padding-right: 16px;
  }

  .c6 > *:not(:first-child) {
    padding-top: 0;
  }
}

@media (min-width:760px) {
  .c2 {
    max-width: 760px;
    padding: 0 20px;
  }
}

@media (min-width:976px) {
  .c2 {
    max-width: 976px;
    padding: 0 20px;
  }
}

@media (min-width:1280px) {
  .c2 {
    max-width: 1280px;
    padding: 0 20px;
  }
}

@media (min-width:1600px) {
  .c2 {
    max-width: 1600px;
    padding: 0 20px;
  }
}

@media print {
  .c2 {
    max-width: none;
  }
}

@media (min-width:760px) {
  .c9 {
    min-width: 160px;
  }
}

@media (min-width:1600px) {
  .c3 {
    width: 83.33333333333334%;
  }
}

<div
  className="c0 c1"
>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <nav
        aria-label="Title"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6"
            >
              <div
                className="c7"
              >
                <button
                  className="NormalizedButton__Button-ey7f5x-0 c8 c9"
                  onClick={[Function]}
                  type="button"
                >
                  <span>
                    <span
                      className="c10"
                    >
                      Next
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </nav>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / Bottom Wizard Bar Webview Embedded 1`] = `
.c4 {
  padding-left: 16px;
  padding-top: 12px;
  padding-right: 16px;
  padding-bottom: 12px;
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -8px;
  margin-right: -8px;
}

.c5 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c5 > *:not(:first-child) {
  padding-top: 0;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c6 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c6 > *:not(:first-child) {
  padding-top: 0;
}

.c7 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c8 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  padding: 0;
  background-color: transparent;
  color: #0046FF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c8,
.c8[type='button'],
.c8[type='reset'],
.c8[type='submit'] {
  -webkit-appearance: button;
}

.c8::-moz-focus-inner,
.c8[type='button']::-moz-focus-inner,
.c8[type='reset']::-moz-focus-inner,
.c8[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c8:-moz-focusring,
.c8[type='button']:-moz-focusring,
.c8[type='reset']:-moz-focusring,
.c8[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c10 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  padding: 8px 16px;
  min-height: 40px;
  background-color: #0046FF;
  color: #FFFFFF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c10,
.c10[type='button'],
.c10[type='reset'],
.c10[type='submit'] {
  -webkit-appearance: button;
}

.c10::-moz-focus-inner,
.c10[type='button']::-moz-focus-inner,
.c10[type='reset']::-moz-focus-inner,
.c10[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c10:-moz-focusring,
.c10[type='button']:-moz-focusring,
.c10[type='reset']:-moz-focusring,
.c10[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c10::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c10:hover {
  background-color: hsl(223.5,100%,45%);
}

.c10:active {
  background-color: hsl(223.5,100%,40%);
}

.c0 {
  background-color: #FFFFFF;
}

.c2 {
  box-sizing: border-box;
  margin: 0 auto;
}

.c1 {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 400;
  border-top: 1px solid #EBEBE8;
}

.c3 {
  margin: 0 auto;
}

@media (min-width:760px) {
  .c4 {
    padding-left: 0px;
    padding-top: 8px;
    padding-right: 0px;
    padding-bottom: 8px;
  }
}

@media (min-width:760px) {
  .c5 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-left: -16px;
    margin-right: -16px;
  }

  .c5 > * {
    padding-left: 16px;
    padding-right: 16px;
  }

  .c5 > *:not(:first-child) {
    padding-top: 0;
  }
}

@media (min-width:760px) {
  .c6 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-left: -16px;
    margin-right: -16px;
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }

  .c6 > * {
    padding-left: 16px;
    padding-right: 16px;
  }

  .c6 > *:not(:first-child) {
    padding-top: 0;
  }
}

@media (min-width:760px) {
  .c2 {
    max-width: 760px;
    padding: 0 20px;
  }
}

@media (min-width:976px) {
  .c2 {
    max-width: 976px;
    padding: 0 20px;
  }
}

@media (min-width:1280px) {
  .c2 {
    max-width: 1280px;
    padding: 0 20px;
  }
}

@media (min-width:1600px) {
  .c2 {
    max-width: 1600px;
    padding: 0 20px;
  }
}

@media print {
  .c2 {
    max-width: none;
  }
}

@media (min-width:760px) {
  .c11 {
    min-width: 160px;
  }
}

@media (min-width:1600px) {
  .c3 {
    width: 83.33333333333334%;
  }
}

<div
  className="c0 c1"
>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <nav
        aria-label="Title"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6"
            >
              <div
                className="c7"
              >
                <button
                  className="NormalizedButton__Button-ey7f5x-0 c8"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="c9"
                  >
                    Previous
                  </span>
                </button>
              </div>
              <div
                className="c7"
              >
                <button
                  className="NormalizedButton__Button-ey7f5x-0 c10 c11"
                  onClick={[Function]}
                  type="button"
                >
                  <span>
                    <span
                      className="c9"
                    >
                      Next
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </nav>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / Bottom Wizard Bar Webview Embedded Last Step And Loading 1`] = `
.c4 {
  padding-left: 16px;
  padding-top: 12px;
  padding-right: 16px;
  padding-bottom: 12px;
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -8px;
  margin-right: -8px;
}

.c5 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c5 > *:not(:first-child) {
  padding-top: 0;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c6 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c6 > *:not(:first-child) {
  padding-top: 0;
}

.c7 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c8 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  padding: 0;
  background-color: transparent;
  color: #A0A09B;
  border: none;
  border-radius: 0;
  cursor: not-allowed;
}

.c8,
.c8[type='button'],
.c8[type='reset'],
.c8[type='submit'] {
  -webkit-appearance: button;
}

.c8::-moz-focus-inner,
.c8[type='button']::-moz-focus-inner,
.c8[type='reset']::-moz-focus-inner,
.c8[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c8:-moz-focusring,
.c8[type='button']:-moz-focusring,
.c8[type='reset']:-moz-focusring,
.c8[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c10 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  padding: 8px 16px;
  min-height: 40px;
  background-color: #0046FF;
  color: #FFFFFF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c10,
.c10[type='button'],
.c10[type='reset'],
.c10[type='submit'] {
  -webkit-appearance: button;
}

.c10::-moz-focus-inner,
.c10[type='button']::-moz-focus-inner,
.c10[type='reset']::-moz-focus-inner,
.c10[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c10:-moz-focusring,
.c10[type='button']:-moz-focusring,
.c10[type='reset']:-moz-focusring,
.c10[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c10::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c10:hover {
  background-color: hsl(223.5,100%,45%);
}

.c10:active {
  background-color: hsl(223.5,100%,40%);
}

.c0 {
  background-color: #FFFFFF;
}

.c2 {
  box-sizing: border-box;
  margin: 0 auto;
}

.c1 {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 400;
  border-top: 1px solid #EBEBE8;
}

.c3 {
  margin: 0 auto;
}

@media (min-width:760px) {
  .c4 {
    padding-left: 0px;
    padding-top: 8px;
    padding-right: 0px;
    padding-bottom: 8px;
  }
}

@media (min-width:760px) {
  .c5 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-left: -16px;
    margin-right: -16px;
  }

  .c5 > * {
    padding-left: 16px;
    padding-right: 16px;
  }

  .c5 > *:not(:first-child) {
    padding-top: 0;
  }
}

@media (min-width:760px) {
  .c6 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-left: -16px;
    margin-right: -16px;
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }

  .c6 > * {
    padding-left: 16px;
    padding-right: 16px;
  }

  .c6 > *:not(:first-child) {
    padding-top: 0;
  }
}

@media (min-width:760px) {
  .c2 {
    max-width: 760px;
    padding: 0 20px;
  }
}

@media (min-width:976px) {
  .c2 {
    max-width: 976px;
    padding: 0 20px;
  }
}

@media (min-width:1280px) {
  .c2 {
    max-width: 1280px;
    padding: 0 20px;
  }
}

@media (min-width:1600px) {
  .c2 {
    max-width: 1600px;
    padding: 0 20px;
  }
}

@media print {
  .c2 {
    max-width: none;
  }
}

@media (min-width:760px) {
  .c11 {
    min-width: 160px;
  }
}

@media (min-width:1600px) {
  .c3 {
    width: 83.33333333333334%;
  }
}

<div
  className="c0 c1"
>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <nav
        aria-label="Title"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6"
            >
              <div
                className="c7"
              >
                <button
                  className="NormalizedButton__Button-ey7f5x-0 c8"
                  disabled={true}
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="c9"
                  >
                    Previous
                  </span>
                </button>
              </div>
              <div
                className="c7"
              >
                <button
                  className="NormalizedButton__Button-ey7f5x-0 c10 c11"
                  onClick={[Function]}
                  type="submit"
                >
                  <span>
                    <span
                      className="c9"
                    >
                      Submit
                    </span>
                  </span>
                  <span />
                </button>
              </div>
            </div>
          </div>
        </div>
      </nav>
    </div>
  </div>
</div>
`;
